--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,14 +10,14 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-      
+
       - name: config AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
-      
+
       - name: deploy
         run: |
-          aws s3 sync . ${{ secrets.AWS_S3_BUCKET_NAME }} --exclude "README.md"
+          aws s3 sync . ${{ secrets.AWS_S3_BUCKET_NAME }} --delete --exclude "README.md" --exclude ".git/" --exclude ".github/"
