--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
 
+      - name: sed api endpoint
+        run: |
+          sed -e "s/<ENDPOINT HERE>/${{ secrets.AWS_API_ENDPOINT }}" js/main.js
+
       - name: deploy
         run: |
           aws s3 sync . ${{ secrets.AWS_S3_BUCKET_NAME }} --delete --exclude "README.md" --exclude ".git/*" --exclude ".github/*"
